update index for my life

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
         <title>Hello | Papadate</title>
     </head>
     <body>
-        <h1>Hello from the United Kingdom</h1>
+        <h1 style="font-style: italic;">Hello from the United Kingdom</h1>
+        <hr>
+        <p>This is my first page from the University of Birmingham</p>
     </body>
 </html>
