change size of img

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
         <h1 style="font-style: italic;">Hello from the United Kingdom</h1>
         <hr>
         <p>This is my first page from the University of Birmingham</p>
-        <img src="/res/image/papaya.png" alt="PaPaDate 的 头像">
+        <img src="/res/image/papaya.png" alt="PaPaDate 的 头像" style="100pt">
     </body>
 </html>
