--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     </head>
     <body>
         <h1>This is Home page</h1>
-        <a href="html/page.html">Open testing page</a>
+        <a href="html/learn.html">Open testing page</a>
+        <a href="html/blog.html">Open papadate's blog</a>
     </body>
 </html>
