--- a/html/learn.html
+++ b/html/learn.html
@@ -12,5 +12,37 @@
             this is a text area!
         </p>
         <a href="https://space.bilibili.com/170262974?spm_id_from=333.1007.0.0">this is my bilibili user page</a>
+
+        <b>这个文本是加粗的</b>
+
+        <br />
+
+        <strong>这个文本是加粗的</strong>
+
+        <br />
+
+        <big>这个文本字体放大</big>
+
+        <br />
+
+        <em>这个文本是斜体的</em>
+
+        <br />
+
+        <i>这个文本是斜体的</i>
+
+        <br />
+
+        <small>这个文本是缩小的</small>
+
+        <br />
+
+        这个文本包含
+        <sub>下标</sub>
+
+        <br />
+
+        这个文本包含
+        <sup>上标</sup>
     </body>
 </html>
