--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
         <title>Home Page</title>
     </head>
     <body>
+        <!--This is comment-->
         <h1>This is Home page</h1>
+        <hr>
         <a href="html/learn.html">Open testing page</a>
         <br>
         <a href="html/blog.html">Open papadate's blog</a>
