--- a/html/javascript.html
+++ b/html/javascript.html
@@ -19,6 +19,8 @@
         <button type="button" onclick="myFunction()">Click me!</button>
         <br>
         <button onclick="hello()">Hello World</button>
+        <br>
+        <button onclick="getElementById('text').innerHTML = Date()">Time</button>
         <p id="text"></p>
     </body>
 </html>
