--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
         <a href="html/learn.html">Open testing page</a>
         <br>
         <a href="html/blog.html">Open papadate's blog</a>
+        <br>
+        <a href="html/javascript.html">Open javascript</a>
     </body>
 </html>
