--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@
         <a href="html/blog.html">Open papadate's blog</a>
         <br>
         <a href="html/javascript.html">Open javascript</a>
+        <br>
+        <a href="html/map.html">Open map</a>
     </body>
 </html>
