--- a/html/map.html
+++ b/html/map.html
@@ -1,26 +1,20 @@
 <!DOCTYPE html>
 <html>
-<body>
+    <head>
+        <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+    </head>
+    <body>
+        <h1>My First Google Map</h1>
+        <div id="map" style="width:100%;height:400px;"></div>
 
-<h1>My First Google Map</h1>
-
-<div id="map" style="width:100%;height:400px;"></div>
-
-<script>
-function myMap() {
-  var mapCanvas = document.getElementById("map");
-  var mapOptions = {
-    center: new google.maps.LatLng(51.5, -0.2), zoom: 10
-  };
-  var map = new google.maps.Map(mapCanvas, mapOptions);
-}
-</script>
-
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCZGR_mBG48okiNIRROHHN3NR_kifrFJUw&callback=myMap"></script>
-<!--
-To use this code on your website, get a free API key from Google.
-Read more at: https://www.w3schools.com/graphics/google_maps_basic.asp
--->
-
-</body>
+        <script>
+            function myMap() 
+            {
+                var mapCanvas = document.getElementById("map");
+                var mapOptions = {center: new google.maps.LatLng(51.5, -0.2), zoom: 10};
+                var map = new google.maps.Map(mapCanvas, mapOptions);
+            }
+        </script>
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCZGR_mBG48okiNIRROHHN3NR_kifrFJUw&callback=myMap"></script>
+    </body>
 </html>
