--- a/index.html
+++ b/index.html
@@ -14,5 +14,7 @@
         <a href="html/javascript.html">Open javascript</a>
         <br>
         <a href="html/map.html">Open map</a>
+        <br>
+        <audio src="./html/src/audio/love trade.mp3" controls></audio>
     </body>
 </html>
