--- a/index.html
+++ b/index.html
@@ -2,20 +2,33 @@
     <head>
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
         <title>Home Page</title>
+        <link rel="stylesheet" type="text/css" href="./css/index.css">
     </head>
     <body>
         <!--This is comment-->
+        
         <h1>This is Home page</h1>
         <hr>
-        <a href="html/learn.html">Open testing page</a>
-        <br>
-        <a href="html/blog.html">Open papadate's blog</a>
-        <br>
-        <a href="html/javascript.html">Open javascript</a>
-        <br>
-        <a href="html/map.html">Open map</a>
-        <br>
-        <p>请欣赏 - 爱情买卖</p>
-        <audio src="./html/src/audio/love trade.mp3" controls></audio>
+        <ol>
+            <li>
+                <a href="html/learn.html">Open testing page</a>
+            </li>
+            <li>
+                <a href="html/blog.html">Open papadate's blog</a>
+            </li>
+            <li>
+                <a href="html/javascript.html">Open javascript</a>
+            </li>
+            <li>
+                <a href="html/map.html">Open map</a>
+            </li>
+            <li>
+                <div>
+                    <p>请欣赏 - 爱情买卖</p>
+                    <audio src="./html/src/audio/love trade.mp3" controls></audio>
+                </div>
+            </li>
+        </ol>
+          
     </body>
 </html>
