--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
                 <a href="html/map.html">Open map</a>
             </li>
             <li>
+                <a href="https://flukeout.github.io/">CSS Practice</a>
+            </li>
+            <li>
                 <div>
                     <p>请欣赏 - 爱情买卖</p>
                     <audio src="./html/src/audio/love trade.mp3" controls></audio>
