--- a/html/blog.html
+++ b/html/blog.html
@@ -7,6 +7,6 @@
         <h1 style="font-style: italic;">Hello from the United Kingdom</h1>
         <hr>
         <p>This is my first page from the University of Birmingham</p>
-        <img src="src/image/papaya.png" alt="PaPaDate 的 头像" style="width: 300pt">
+        <img src="../src/image/papaya.png" alt="PaPaDate 的 头像" style="width: 300pt">
     </body>
 </html>
