--- a/html/TestPage.html
+++ b/html/TestPage.html
@@ -26,6 +26,10 @@
                 <a href="https://flukeout.github.io/">CSS Practice</a>
             </li>
             <li>
+                <a href="color.html">Color Mode</a>
+            </li>
+
+            <li>
                 <div>
                     <p>请欣赏 - 爱情买卖</p>
                     <audio src="../src/audio/love trade.mp3" controls></audio>
