--- a/html/TestPage.html
+++ b/html/TestPage.html
@@ -28,7 +28,9 @@
             <li>
                 <a href="color.html">Color Mode</a>
             </li>
-
+            <li>
+                <a href="box.html">Box Mode</a>
+            </li>
             <li>
                 <div>
                     <p>请欣赏 - 爱情买卖</p>
