--- a/html/box.html
+++ b/html/box.html
@@ -22,8 +22,14 @@
                 <ul>
                     <!-- name -->
                     <li>
-                        <div id="div_name" class="float">
+                        <div id="div_name">
                             <p id="name">Papadate</p>
+                        </div>
+                    </li>
+                    <!-- description -->
+                    <li>
+                        <div id="div_des">
+                            <p id="des">Pour my hear into any tiny things!~</p>
                         </div>
                     </li>
                 </ul>
