--- a/html/box.html
+++ b/html/box.html
@@ -1,39 +1,43 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta 
-                charset="UTF-8"
-                name="viewport" 
-                content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-        <title>box page</title>
-        <link rel="stylesheet" href="../css/reset.css">
-        <link rel="stylesheet" type="text/css" href="../css/box_html.css">
-    </head>
-    <body>
-        <div id="top_bar" class="round">
-            <!-- profile photo -->
-            <div id="block1" class="block"></div>
-            <nav id="profile_photo" class="float">
-                <img src="../src/image/profile_photo.jpeg" alt="photo">
-            </nav>
-            <div id="block1" class="block"></div>
-            <!-- Name / Description -->
-            <div id="name_des" class="block">
-                <ul>
-                    <!-- name -->
-                    <li>
-                        <div id="div_name">
-                            <p id="name">Papadate</p>
-                        </div>
-                    </li>
-                    <!-- description -->
-                    <li>
-                        <div id="div_des">
-                            <p id="des">Pour my hear into any tiny things!~</p>
-                        </div>
-                    </li>
-                </ul>
-            </div>
+
+<head>
+    <meta charset="UTF-8" name="viewport"
+        content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+    <title>box page</title>
+    <link rel="stylesheet" href="../css/reset.css">
+    <link rel="stylesheet" type="text/css" href="../css/box_html.css">
+</head>
+
+<body>
+    <div id="top_bar" class="round">
+        <!-- profile photo -->
+
+        <div id="block1" class="block"></div>
+        <nav id="profile_photo" class="float">
+            <img src="../src/image/profile_photo.jpeg" alt="photo">
+        </nav>
+        <div id="block1" class="block"></div>
+
+
+        <!-- Name / Description -->
+        <div id="name_des" class="block float">
+            <ul>
+                <!-- name -->
+                <li>
+                    <div id="div_name">
+                        <p id="name">Papadate</p>
+                    </div>
+                </li>
+                <!-- description -->
+                <li>
+                    <div id="div_des">
+                        <p id="des">Pour my hear into any tiny things!~</p>
+                    </div>
+                </li>
+            </ul>
         </div>
-    </body>
+    </div>
+</body>
+
 </html>
