--- a/html/box.html
+++ b/html/box.html
@@ -15,7 +15,9 @@
 
         <div id="block1" class="block"></div>
         <nav id="profile_photo" class="float">
+            <a href="https://github.com/papadate">
             <img src="../src/image/profile_photo.jpeg" alt="photo">
+        </a>
         </nav>
         <div id="block1" class="block"></div>
 
@@ -26,7 +28,9 @@
                 <!-- name -->
                 <li>
                     <div id="div_name">
-                        <p id="name">Papadate</p>
+                        <p>
+                            <a id="name" href="https://github.com/papadate">Papadate</a>
+                        </p>
                     </div>
                 </li>
                 <!-- description -->
