--- a/html/box.html
+++ b/html/box.html
@@ -41,6 +41,16 @@
                 </li>
             </ul>
         </div>
+        <!-- test feature -->
+        <div id="div_test">
+            <button id="test_button" onclick="test()">测试</button>
+            <script>
+                function test()
+                {
+                    window.location.href="TestPage.html";
+                }
+            </script>
+        </div>
     </div>
 </body>
 
