--- a/html/box.html
+++ b/html/box.html
@@ -16,8 +16,8 @@
         <div id="block1" class="block"></div>
         <nav id="profile_photo" class="float">
             <a href="https://github.com/papadate">
-            <img src="../src/image/profile_photo.jpeg" alt="photo">
-        </a>
+                <img src="../src/image/profile_photo.jpeg" alt="photo">
+            </a>
         </nav>
         <div id="block1" class="block"></div>
 
@@ -45,13 +45,41 @@
         <div id="div_test">
             <button id="test_button" onclick="test()">测试</button>
             <script>
-                function test()
-                {
-                    window.location.href="TestPage.html";
+                function test() {
+                    window.location.href = "TestPage.html";
                 }
             </script>
         </div>
     </div>
+    <!-- main block -->
+    <div id="main">
+        <div class="side2">
+            <div id="side_title" class="float side">
+                <p>侧 边 栏</p>
+            </div>
+            <div id="side_content" class="float">
+                <div>
+                    <a href="" title="Papadate 的 博客">
+                        <p>Papadate 的 博客</p>
+                    </a>
+                </div>
+                <div>
+                    <a href="" title="Papadate 的 博客">
+                        <p>Papadate 的 博客</p>
+                    </a>
+                </div>
+                <div>
+                    <a href="" title="Papadate 的 博客">
+                        <p>Papadate 的 博客</p>
+                    </a>
+                </div>
+                <div>
+                    <a href="" title="Papadate 的 博客">
+                        <p>Papadate 的 博客</p>
+                    </a>
+                </div>
+            </div>
+        </div>
 </body>
 
 </html>
