--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" name="viewport"
         content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-    <title>box page</title>
+    <title>Home page</title>
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" type="text/css" href="./css/box_html.css">
 </head>
@@ -52,6 +52,35 @@
             </script>
         </div>
     </div>
+        <!-- main block -->
+        <div id="main">
+            <div class="side2">
+                <div id="side_title" class="float side">
+                    <p>侧 边 栏</p>
+                </div>
+                <div id="side_content" class="float">
+                    <div>
+                        <a href="index.html" title="主页">
+                            <p>主页</p>
+                        </a>
+                    </div>
+                    <div>
+                        <a href="html/box.html" title="测试版网页">
+                            <p>先行测试版网页</p>
+                        </a>
+                    </div>
+                    <div>
+                        <a href="html/TestPage.html" title="测试段">
+                            <p>测试端主页</p>
+                        </a>
+                    </div>
+                    <div>
+                        <a href="html/map.html" title="地图">
+                            <p>私人 Google 地图</p>
+                        </a>
+                    </div>
+                </div>
+            </div>
 </body>
 
 </html>
