--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <div id="block1" class="block"></div>
         <nav id="profile_photo" class="float">
             <a href="https://github.com/papadate">
-            <img src="./src/image/profile_photo.jpeg" alt="photo">
-        </a>
+                <img src="./src/image/profile_photo.jpeg" alt="photo">
+            </a>
         </nav>
         <div id="block1" class="block"></div>
 
@@ -45,42 +45,64 @@
         <div id="div_test">
             <button id="test_button" onclick="test()">测试</button>
             <script>
-                function test()
-                {
-                    window.location.href="./html/TestPage.html";
+                function test() {
+                    window.location.href = "./html/TestPage.html";
                 }
             </script>
         </div>
     </div>
-        <!-- main block -->
-        <div id="main">
-            <div class="side2">
-                <div id="side_title" class="float side">
-                    <p>侧 边 栏</p>
+    <!-- main block -->
+    <div id="main">
+        <div class="side2">
+            <div id="side_title" class="float side">
+                <p>侧 边 栏</p>
+            </div>
+            <div id="side_content" class="float">
+                <div>
+                    <a href="index.html" title="主页">
+                        <p>主页</p>
+                    </a>
                 </div>
-                <div id="side_content" class="float">
-                    <div>
-                        <a href="index.html" title="主页">
-                            <p>主页</p>
-                        </a>
-                    </div>
-                    <div>
-                        <a href="html/box.html" title="测试版网页">
-                            <p>先行测试版网页</p>
-                        </a>
-                    </div>
-                    <div>
-                        <a href="html/TestPage.html" title="测试段">
-                            <p>测试端主页</p>
-                        </a>
-                    </div>
-                    <div>
-                        <a href="html/map.html" title="地图">
-                            <p>私人 Google 地图</p>
-                        </a>
-                    </div>
+                <div>
+                    <a href="html/box.html" title="测试版网页">
+                        <p>先行测试版网页</p>
+                    </a>
+                </div>
+                <div>
+                    <a href="html/TestPage.html" title="测试段">
+                        <p>测试端主页</p>
+                    </a>
+                </div>
+                <div>
+                    <a href="html/map.html" title="地图">
+                        <p>私人 Google 地图</p>
+                    </a>
                 </div>
             </div>
+            <div id="music_name">
+                <p>音乐： 爱情买卖</p>
+            </div>
+            <div id="music">
+                <audio id="source" src="./src/audio/love trade.mp3"></audio>
+                <div>
+                    <button class="music_control" onclick="playme()">点击播放</button>
+                    <button class="music_control" onclick="pauseme()">点击暂停</button>
+                </div>
+               
+               <script>
+                var music = document.getElementById("source");
+                music.preload();
+                function playme()
+                {
+                    music.play();
+                }
+                function pauseme()
+                {
+                    music.pause();
+                }
+               </script>
+            </div>
+        </div>
 </body>
 
 </html>
