--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <button id="test_button" onclick="test()">测试</button>
             <script>
                 function test() {
-                    window.location.href = "./html/TestPage.html";
+                    window.location.href = "./html/ex3.html";
                 }
             </script>
         </div>
