--- a/html/ex3.html
+++ b/html/ex3.html
@@ -45,6 +45,11 @@
         #location {
             float: left;
         }
+        #current_city {
+            margin: 0px 5px;
+            display: block;
+            text-align: center;
+        }
         #current_city:hover {
             outline: rgba(0, 0, 0, 0.529);
             outline-width: 1px;
@@ -59,11 +64,12 @@
             /* 间距 */
             margin-left: 25px;
         }
-        #current_city:hover, #menu > li:hover, #top_bar a:hover{
+        #menu > li:hover, #top_bar a:hover{
             background-color: #9d9b9b;
             color: #fff;
         }
         #city_list {
+            margin: 0px 5px;
             width: 30%;
             position: absolute;
             display: none;
@@ -88,6 +94,18 @@
         }
         #location:hover #city_list {
             display: block;
+        }
+        #location:hover #current_city {
+            background-color: #9d9b9b;
+            outline-width: 1px;
+            outline-style: solid;
+            outline-color: rgba(0, 0, 0, 0.529);
+        }
+        #map{
+            position: absolute;
+            offset: 300px;
+            width: 200px;
+            height: 200px;
         }
     </style>
 </head>
@@ -202,9 +220,9 @@
                     </a>
                 </li>
                 <li>
-                    <i class="fas fa-phone"></i>
+                    <i class="fas fa-map-signs"></i>
                     <a href="#">
-                        <span>联系我们</span>
+                        <span>地图</span>
                     </a>
                 </li>
             </ul>
