--- a/html/ex3.html
+++ b/html/ex3.html
@@ -49,6 +49,7 @@
             margin: 0px 5px;
             display: block;
             text-align: center;
+            padding: 0px 10px;
         }
         #current_city:hover {
             outline: rgba(0, 0, 0, 0.529);
@@ -62,7 +63,8 @@
         #menu li {
             float: left;
             /* 间距 */
-            margin-left: 25px;
+            margin-left: 20px;
+            padding: 0px 10px;
         }
         #menu > li:hover, #top_bar a:hover{
             background-color: #9d9b9b;
@@ -70,7 +72,7 @@
         }
         #city_list {
             margin: 0px 5px;
-            width: 30%;
+            width: 40%;
             position: absolute;
             display: none;
             background-color: white;
