--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     </a>
                 </div>
                 <div>
-                    <a href="html/box.html" title="测试版网页">
+                    <a href="./blog/index_blog.html" title="正式版网页">
                         <p>先行测试版网页</p>
                     </a>
                 </div>
