--- a/index.html
+++ b/index.html
@@ -78,6 +78,11 @@
                         <p>私人 Google 地图</p>
                     </a>
                 </div>
+                <div>
+                    <a href="./html/exercise_3.html" title="JavaScript">
+                        <p>JavaScript</p>
+                    </a>
+                </div>
             </div>
             <div id="music_name">
                 <p>音乐： 爱情买卖</p>
