--- a/index.html
+++ b/index.html
@@ -83,6 +83,16 @@
                         <p>JavaScript</p>
                     </a>
                 </div>
+                <div>
+                    <a href="./html/slideshow.html" title="轮播图">
+                        <p>轮播图</p>
+                    </a>
+                </div>
+                <div>
+                    <a href="./html/move.html" title="move">
+                        <p>JS 动画测试</p>
+                    </a>
+                </div>
             </div>
             <div id="music_name">
                 <p>音乐： 爱情买卖</p>
