--- a/html/slideshow.html
+++ b/html/slideshow.html
@@ -13,7 +13,8 @@
         <!-- 1. div -> img
              2. a list of navigator
              3. last img button
-             4. next img button -->
+             4. next img button
+             5. qrcode space -->
         <div id="box">
             <!-- container for img -->
             <div id="img_box">
@@ -22,6 +23,10 @@
             <!-- container for navigator -->
             <ul id="navigator">
             </ul>
+            <!-- Qrcode div -->
+            <div id="qrCode">
+
+            </div>
             <!-- container for last and next button -->
             <div id="controller"> 
                 <!-- go back -->
