--- a/html/slideshow.html
+++ b/html/slideshow.html
@@ -17,6 +17,9 @@
             // initialize the location of qrCode -> left-bottom corner of the img_box
             qrCode.style.left = 4 + img_box.offsetLeft + "px";
             qrCode.style.top = -4 +img_box.offsetTop + img_box.offsetHeight - qrCode.offsetHeight + "px";
+
+            //import the images
+
         }
     </script>
 </head>
@@ -30,7 +33,7 @@
         <div id="box">
             <!-- container for img -->
             <div id="img_box">
-
+                <img src="../src/image/slide_show/1.webp" alt="1">
             </div>
             <!-- container for navigator -->
             <ul id="navigator">
