--- a/html/slideshow.html
+++ b/html/slideshow.html
@@ -13,10 +13,15 @@
             var qrCode = document.getElementById("qrCode");
             var img_list = document.getElementById("img_list");
             var navigator = document.getElementById("navigator");
+            var last = document.getElementById("last");
+            var next = document.getElementById("next");
 
             // initialize the location of qrCode -> left-bottom corner of the img_box
             qrCode.style.left = 4 + img_box.offsetLeft + "px";
             qrCode.style.top = -5 +img_box.offsetTop + img_box.offsetHeight - qrCode.offsetHeight + "px";
+
+            var qrArr = ["../src/image/slide_show/QrCode/1.png", "../src/image/slide_show/QrCode/2.png", "../src/image/slide_show/QrCode/3.png", "../src/image/slide_show/QrCode/4.png", "../src/image/slide_show/QrCode/5.png", "../src/image/slide_show/QrCode/6.png", "../src/image/slide_show/QrCode/7.png"];
+            qrCode.firstElementChild.firstElementChild.firstElementChild.src = qrArr[0];
 
             img_list.imgSize = 7;
             img_list.current = 0;
@@ -33,6 +38,51 @@
                         img_list.style.top = -((466+5)*arg) + "px";
                     }
                 }(i);
+            }
+            navigator.children[img_list.current].firstElementChild.style.backgroundColor = "red";
+            img_list.timer = setInterval(function(){
+                navigator.children[img_list.current].firstElementChild.style.backgroundColor = "rgba(255, 254, 254, 0.826)";
+                if (img_list.current == (img_list.imgSize-1))
+                {
+                    img_list.current = -1;
+                }
+                img_list.current++;
+                navigator.children[img_list.current].firstElementChild.style.backgroundColor = "red";
+                if(img_list.current == img_list.imgSize)
+                {
+                    img_list.current = 0;
+                }
+                img_list.style.top = -((466+5)*img_list.current) + "px";
+                qrCode.firstElementChild.firstElementChild.firstElementChild.src = qrArr[img_list.current];
+            }, 388000);
+
+            last.onclick = function()
+            {
+                navigator.children[img_list.current].firstElementChild.style.backgroundColor = "rgba(255, 254, 254, 0.826)";
+                if (img_list.current == 0)
+                {
+                    img_list.current = img_list.imgSize;
+                }
+                img_list.current--;
+                navigator.children[img_list.current].firstElementChild.style.backgroundColor = "red";
+                img_list.style.top = -((466+5)*img_list.current) + "px";
+                qrCode.firstElementChild.firstElementChild.firstElementChild.src = qrArr[img_list.current];
+            }
+            next.onclick = function()
+            {
+                navigator.children[img_list.current].firstElementChild.style.backgroundColor = "rgba(255, 254, 254, 0.826)";
+                if (img_list.current == (img_list.imgSize-1))
+                {
+                    img_list.current = -1;
+                }
+                img_list.current++;
+                navigator.children[img_list.current].firstElementChild.style.backgroundColor = "red";
+                if(img_list.current == img_list.imgSize)
+                {
+                    img_list.current = 0;
+                }
+                img_list.style.top = -((466+5)*img_list.current) + "px";
+                qrCode.firstElementChild.firstElementChild.firstElementChild.src = qrArr[img_list.current];
             }
         }
     </script>
