--- a/html/TestPage.html
+++ b/html/TestPage.html
@@ -37,6 +37,9 @@
                     <audio src="../src/audio/love trade.mp3" controls></audio>
                 </div>
             </li>
+            <li>
+                <a href="./form.html">form</a>
+            </li>
         </ol>
           
     </body>
