--- a/html/form.html
+++ b/html/form.html
@@ -25,7 +25,7 @@
     </script>
 </head>
 <body>
-    <form action="./form.php" method="get">
+    <form action="../php/form.php" method="get">
         <label>
             您要存储的金额是：
             <input type="number" name="value" id="input_value">
